Fixed Section whitespace

--- a/360WaveProcess/CSS/index.css
+++ b/360WaveProcess/CSS/index.css
@@ -7,6 +7,8 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html,
@@ -56,6 +58,7 @@ h2 {
     color: #f9f3f4;
     text-shadow: 0px 0px 300px #000;
     font-size: 392%;
+    margin-bottom: 50px;
 }
 
 .button {
